tests/snapshots/ci_sarif_golden__sarif_all_severity_levels.snap
---
source: tests/ci_sarif_golden.rs
expression: json
---
{
  "version": "2.1.0",
  "$schema": "https://json.schemastore.org/sarif-2.1.0.json",
  "runs": [
    {
      "tool": {
        "driver": {
          "name": "raff",
          "version": "[version]",
          "rules": [
            {
              "id": "rust-code-analysis",
              "name": "Rust Code Analysis"
            },
            {
              "id": "statement-count",
              "name": "Statement Count Rule"
            },
            {
              "id": "volatility",
              "name": "Volatility Rule"
            }
          ]
        }
      },
      "results": [
        {
          "ruleId": "statement-count",
          "level": "error",
          "message": {
            "text": "Component 'src' exceeds threshold"
          },
          "locations": [
            {
              "physical_location": {
                "artifact_location": {
                  "uri": "src/main.rs"
                }
              }
            }
          ],
          "partialFingerprints": {
            "primaryLocation": "error-fingerprint"
          }
        },
        {
          "ruleId": "volatility",
          "level": "warning",
          "message": {
            "text": "Crate 'my-crate' has high volatility"
          },
          "partialFingerprints": {
            "primaryLocation": "warning-fingerprint"
          }
        },
        {
          "ruleId": "rust-code-analysis",
          "level": "note",
          "message": {
            "text": "File metrics collected"
          },
          "locations": [
            {
              "physical_location": {
                "artifact_location": {
                  "uri": "src/lib.rs"
                }
              }
            }
          ],
          "partialFingerprints": {
            "primaryLocation": "note-fingerprint"
          }
        }
      ]
    }
  ]
}
