tests/snapshots/ci_sarif_golden__sarif_empty.snap
---
source: tests/ci_sarif_golden.rs
expression: json
---
{
  "version": "2.1.0",
  "$schema": "https://json.schemastore.org/sarif-2.1.0.json",
  "runs": [
    {
      "tool": {
        "driver": {
          "name": "raff",
          "version": "[version]"
        }
      },
      "results": []
    }
  ]
}
