tests/snapshots/ci_sarif_golden__sarif_finding_with_line_range.snap
---
source: tests/ci_sarif_golden.rs
expression: json
---
{
  "version": "2.1.0",
  "$schema": "https://json.schemastore.org/sarif-2.1.0.json",
  "runs": [
    {
      "tool": {
        "driver": {
          "name": "raff",
          "version": "[version]",
          "rules": [
            {
              "id": "rust-code-analysis",
              "name": "Rust Code Analysis",
              "helpUri": "https://github.com/liamwh/raff#rust-code-analysis"
            }
          ]
        }
      },
      "results": [
        {
          "ruleId": "rust-code-analysis",
          "level": "note",
          "message": {
            "text": "Function 'process_data' has high cyclomatic complexity: 15 (threshold: 10)"
          },
          "locations": [
            {
              "physical_location": {
                "artifact_location": {
                  "uri": "src/processor.rs"
                },
                "region": {
                  "start_line": 42,
                  "end_line": 89
                }
              }
            }
          ],
          "partialFingerprints": {
            "primaryLocation": "rca:process_data:15"
          }
        }
      ]
    }
  ]
}
