tests/snapshots/ci_sarif_golden__sarif_finding_with_special_characters.snap
---
source: tests/ci_sarif_golden.rs
expression: json
---
{
  "version": "2.1.0",
  "$schema": "https://json.schemastore.org/sarif-2.1.0.json",
  "runs": [
    {
      "tool": {
        "driver": {
          "name": "raff",
          "version": "[version]",
          "rules": [
            {
              "id": "statement-count",
              "name": "Statement Count Rule",
              "helpUri": "https://github.com/liamwh/raff#statement-count"
            }
          ]
        }
      },
      "results": [
        {
          "ruleId": "statement-count",
          "level": "error",
          "message": {
            "text": "Component 'src/utils/helpers' has 1000 statements (10%), exceeding threshold of 5%"
          },
          "locations": [
            {
              "physical_location": {
                "artifact_location": {
                  "uri": "src/utils/helpers.rs"
                }
              }
            }
          ],
          "partialFingerprints": {
            "primaryLocation": "statement-count:src/utils/helpers:5:1000"
          }
        }
      ]
    }
  ]
}
