tests/snapshots/ci_sarif_golden__sarif_multiple_findings_different_rules.snap
---
source: tests/ci_sarif_golden.rs
expression: json
---
{
  "version": "2.1.0",
  "$schema": "https://json.schemastore.org/sarif-2.1.0.json",
  "runs": [
    {
      "tool": {
        "driver": {
          "name": "raff",
          "version": "[version]",
          "rules": [
            {
              "id": "coupling",
              "name": "Coupling Rule",
              "helpUri": "https://github.com/liamwh/raff#module-coupling"
            },
            {
              "id": "statement-count",
              "name": "Statement Count Rule",
              "helpUri": "https://github.com/liamwh/raff#statement-count"
            },
            {
              "id": "volatility",
              "name": "Volatility Rule",
              "helpUri": "https://github.com/liamwh/raff#volatility"
            }
          ]
        }
      },
      "results": [
        {
          "ruleId": "statement-count",
          "level": "error",
          "message": {
            "text": "Component 'src' has 5000 statements (25%), exceeding threshold of 20%"
          },
          "locations": [
            {
              "physical_location": {
                "artifact_location": {
                  "uri": "src/main.rs"
                }
              }
            }
          ],
          "partialFingerprints": {
            "primaryLocation": "statement-count:src:20:5000"
          }
        },
        {
          "ruleId": "volatility",
          "level": "warning",
          "message": {
            "text": "Crate 'my-crate' has high volatility: raw_score=0.85 (alpha=0.01)"
          },
          "partialFingerprints": {
            "primaryLocation": "volatility:my-crate:0.01:0.85"
          }
        },
        {
          "ruleId": "coupling",
          "level": "warning",
          "message": {
            "text": "Crate 'domain' (I=0.25) depends on less stable crate 'api' (I=0.75), violating the Stable Dependencies Principle"
          },
          "partialFingerprints": {
            "primaryLocation": "coupling-sdp:domain:api"
          }
        }
      ]
    }
  ]
}
