tests/snapshots/ci_sarif_golden__sarif_note_finding.snap
---
source: tests/ci_sarif_golden.rs
expression: json
---
{
  "version": "2.1.0",
  "$schema": "https://json.schemastore.org/sarif-2.1.0.json",
  "runs": [
    {
      "tool": {
        "driver": {
          "name": "raff",
          "version": "[version]",
          "rules": [
            {
              "id": "rust-code-analysis",
              "name": "Rust Code Analysis"
            }
          ]
        }
      },
      "results": [
        {
          "ruleId": "rust-code-analysis",
          "level": "note",
          "message": {
            "text": "File 'src/lib.rs' metrics: SLOC=150, Cyclomatic Avg=2.5, Halstead Volume=4500"
          },
          "locations": [
            {
              "physical_location": {
                "artifact_location": {
                  "uri": "src/lib.rs"
                }
              }
            }
          ],
          "partialFingerprints": {
            "primaryLocation": "rca:src/lib.rs:150:4500"
          }
        }
      ]
    }
  ]
}
