tests/snapshots/ci_sarif_golden__sarif_single_error_finding.snap
---
source: tests/ci_sarif_golden.rs
expression: json
---
{
  "version": "2.1.0",
  "$schema": "https://json.schemastore.org/sarif-2.1.0.json",
  "runs": [
    {
      "tool": {
        "driver": {
          "name": "raff",
          "version": "[version]",
          "rules": [
            {
              "id": "statement-count",
              "name": "Statement Count Rule",
              "helpUri": "https://github.com/liamwh/raff#statement-count"
            }
          ]
        }
      },
      "results": [
        {
          "ruleId": "statement-count",
          "level": "error",
          "message": {
            "text": "Component 'src' has 5000 statements (25%), exceeding threshold of 20%"
          },
          "locations": [
            {
              "physical_location": {
                "artifact_location": {
                  "uri": "src/main.rs"
                }
              }
            }
          ],
          "partialFingerprints": {
            "primaryLocation": "statement-count:src:20:5000"
          }
        }
      ]
    }
  ]
}
