tests/snapshots/ci_sarif_golden__sarif_warning_finding.snap
---
source: tests/ci_sarif_golden.rs
expression: json
---
{
  "version": "2.1.0",
  "$schema": "https://json.schemastore.org/sarif-2.1.0.json",
  "runs": [
    {
      "tool": {
        "driver": {
          "name": "raff",
          "version": "[version]",
          "rules": [
            {
              "id": "volatility",
              "name": "Volatility Rule",
              "helpUri": "https://github.com/liamwh/raff#volatility"
            }
          ]
        }
      },
      "results": [
        {
          "ruleId": "volatility",
          "level": "warning",
          "message": {
            "text": "Crate 'my-crate' has high volatility: raw_score=0.85 (alpha=0.01)"
          },
          "partialFingerprints": {
            "primaryLocation": "volatility:my-crate:0.01:0.85"
          }
        }
      ]
    }
  ]
}
